Removing SSL from all the routes.  We can't handle a self-signed cert in the websocket, so I've removed it entirely.

--- a/containers/kubeinvaders/custom-deployment.yaml
+++ b/containers/kubeinvaders/custom-deployment.yaml
@@ -36,6 +36,8 @@ spec:
       - env:
         - name: ENDPOINT
           value: kubeinvaders_endpoint_placeholder
+        - name: INSECURE_ENDPOINT
+          value: "true"
         - name: NAMESPACE
           value: target
         - name: ALIENPROXIMITY
